@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - fix email format tests on older prereqs
+          - avoid errors when enabling validate_formats before evaluating but
+            after loading a schema
 
 0.515     2021-08-03 04:07:02Z
           - no longer calling a keyword's callback during traverse() if that
